crates/seance-render-test/tests/snapshots/layer4_frame__box_drawing_renders_in_grid.snap
---
source: crates/seance-render-test/tests/layer4_frame.rs
expression: world.dump_frame()
---
╭──────────╮
│┌──┐      │
││  │      │
│└──┘      │
│          │
│          │
╰──────────╯
cells:
  (none)
cursor: (3,0) visible=true
selection: none
