crates/seance-render-test/tests/snapshots/layer4_frame__empty_fixture_dumps_blank_grid.snap
---
source: crates/seance-render-test/tests/layer4_frame.rs
expression: world.dump_frame()
---
╭────────────────────╮
│                    │
│                    │
│                    │
╰────────────────────╯
cells:
  (none)
cursor: (0,0) visible=true
selection: none
