crates/seance-render-test/tests/snapshots/layer4_frame__hello_world_fixture_shows_text_on_first_row.snap
---
source: crates/seance-render-test/tests/layer4_frame.rs
expression: world.dump_frame()
---
╭────────────────────╮
│hello world         │
│                    │
│                    │
╰────────────────────╯
cells:
  (none)
cursor: (1,11) visible=true
selection: none
