crates/seance-render-test/tests/snapshots/layer4_frame__wide_chars_span_two_columns_each.snap
---
source: crates/seance-render-test/tests/layer4_frame.rs
expression: world.dump_frame()
---
╭────────────────────╮
│你好 world          │
│                    │
│                    │
╰────────────────────╯
cells:
  (none)
cursor: (1,10) visible=true
selection: none
